# job-automation

./: .env.example  .gitignore  ARCHITECTURE.md  BROWSER_WORKER_SUMMARY.txt  FINAL_STATUS.md  HANDOFF.md  HERMES.md  Makefile  PHASE2_TEST_REPORT.txt  PROJECT_STATUS.md  QUICKSTART.md  README.md  docker-compose.yml  phase2_test.sh  session_transcript.txt  setup-portable.sh  spec.md  start.sh  test_ashby_cdp.py  test_e2e.sh  test_system.sh
apps/browser-worker/: .dockerignore  Dockerfile  QUICKSTART.md  README.md  create_test_resume.py  prove_persistent_profile.py  pyproject.toml  requirements.txt  run_demo.sh  test_quick.py
apps/browser-worker/browser_worker/: __init__.py  models.py  queue_worker.py  render_server.py  state.py  worker.py
apps/browser-worker/tests/: test_adapters.py  test_application_data_logistics_fields.py  test_captcha_detection.py  test_checkpoint_manager.py  test_concurrent_cdp_context.py  (+35 more)
backend/: .dockerignore  .env.example  SETUP.md  main.py  pyproject.toml  requirements.txt  setup.sh  test_integration.py  worker.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_api.py  test_application_question_agent.py  test_application_questions_classification.py  test_application_review_agent.py  test_company_watches.py  test_cover_letter_agent.py  test_extracted_job_schema.py  test_extraction_agent.py  test_job_discovery.py  test_job_discovery_cycle.py  test_matching.py  test_replay_report.py  test_resume_rendering.py  test_resume_selection.py  test_resume_tailoring.py  test_resumes.py  test_reusable_answers.py  test_strip_html.py
(+186 files in other folders)
